# interception-tools

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: git_submodules.cmake
servicefiles/: CMakeLists.txt  udevmon.service.in
src/: CMakeLists.txt
tools/: CMakeLists.txt
tools/intercept/: CMakeLists.txt  main.cpp
tools/mux/: CMakeLists.txt  main.cpp
tools/udevmon/: CMakeLists.txt  main.cpp
tools/uinput/: CMakeLists.txt  uinput.cpp
